--- a/polls/templates/polls/details.html
+++ b/polls/templates/polls/details.html
@@ -1,15 +1,12 @@
-{{ question.id }}
-<!-- <form action="{% url 'polls:vote' question_id %}" method="POST">
+<form action="{% url 'polls:vote' question.id %}" method="POST">
   {% csrf_token %}
   <fieldset>
     <legend>
       <h1>{{ question.question_text }}</h1>
     </legend>
-
     {% if error_message %}
     <p><strong>{{ error_message }}</strong></p>
     {% endif %}
-
 
     {% for choice in question.choice_set.all %}
     <input type="radio" name="choice" id="choice {{ forloop.counter }}" value="{{ choice.id }}">
@@ -17,4 +14,4 @@
     {% endfor %}
   </fieldset>
   <input type="submit" value="Vote">
-</form> -->
+</form>
